# Serial_Bridge_Skeleton

./: .CMakeLists.txt.~undo-tree~  CMakeLists.txt  included_files
.cache/clangd/index/: main.cpp.777706821244D997.idx  main.cpp.C2E37A0FBEA38D37.idx  serial_class.hpp.57C0C02651E4F43D.idx
include/Serial_Bridge_Skeleton/: .serial_class.hpp.~undo-tree~  .test.cpp.~undo-tree~  .working_struct.hpp.~undo-tree~  serial_class.hpp  serial_class.hpp~
launch/: .thing.launch.py.~undo-tree~  .this_thing.launch.py.~undo-tree~  thing.launch.py~  this_thing.launch.py
src/: #main.cpp#  .main.cpp.~undo-tree~  .main.cpp~.~undo-tree~  main.cpp  main.cpp~
